[fix bug 1243890] Update FxA iframe param for Fx46.
- Update FxA docs to include local server IP/port

--- a/bedrock/firefox/templates/firefox/firstrun/firstrun.html
+++ b/bedrock/firefox/templates/firefox/firstrun/firstrun.html
@@ -47,7 +47,7 @@
 {% endblock %}
 
 {% block content %}
-<section id="intro" data-fxa-iframe-src="{{ settings.FXA_IFRAME_SRC }}">
+<section id="intro" data-fxa-iframe-host="{{ settings.FXA_IFRAME_SRC }}">
   <div class="container">
     <header>
       <h1>{{ _('Almost done!') }}</h1>
