--- a/bedrock/firefox/templates/firefox/accounts.html
+++ b/bedrock/firefox/templates/firefox/accounts.html
@@ -28,7 +28,7 @@
 {% block site_header_nav %}{% endblock %}
 
 {% block content %}
-<main role="main" data-fxa-iframe-src="{{ settings.FXA_IFRAME_SRC }}">
+<main role="main" data-fxa-iframe-host="{{ settings.FXA_IFRAME_SRC }}">
   <h1>{{_('Your Firefox. Anywhere. Anytime.')}}</h1>
   <div class="main-copy">
     {% include 'firefox/includes/sync-animation.html' %}
