--- a/bedrock/mozorg/templates/mozorg/plugincheck-c.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck-c.html
@@ -25,13 +25,13 @@
 {% block body_id %}plugincheck{% endblock %}
 
 {% block extrahead %}
-  {% stylesheet 'plugincheck' %}
+  {% stylesheet 'plugincheck-c' %}
 {% endblock %}
 
 {#- Override the infobar options not to run the version check Bug 1111656 -#}
 {% block tabzilla_infobar %}translation{% endblock %}
 
-{% block body_class %}sky{% endblock %}
+{% block body_class %}sky plugincheck-variant{% endblock %}
 
 {% block optimizely %}
   {% if waffle.switch('plugincheck-optimizely') %}
@@ -75,6 +75,8 @@
   data-media-url="{{ static('') }}"
 {% endblock %}
 
+{% block site_header_logo %}{% endblock %}
+
 {% block site_header_share %}
   {% set share_urls = { 'twitter': 'http://mzl.la/17aqnLZ', 'googleplus': 'http://mzl.la/1FuAhTS', 'facebook': 'http://mzl.la/1z4Noqm' } -%}
   {% if l10n_has_tag('plugincheck_nosupport') -%}
@@ -89,7 +91,8 @@
 {% block content %}
 <main role="main">
   <header id="main-feature">
-      <h1 class="large">{{_('Check Your Plugins')}}</h1>
+      <a href="{{ url('firefox') }}">{{ high_res_img('plugincheck/firefox-logo.png', {'alt': 'Mozilla Firefox', 'width': '145', 'class': 'firefox-logo'}) }}</a>
+      <h2 class="large">{{_('Check Your Plugins')}}</h2>
       <p class="preamble">{{_('Keeping your plugins up to date helps Firefox run safely and smoothly.')}}</p>
   </header>
 
@@ -167,14 +170,14 @@
 
         <div id="sec-plugin-unknown" class="shadow-separator">
           <table class="table status status-unknown">
-            <caption>{{_('Unknown Plugins')}}</caption>
-            <thead>
+            <caption aria-role="button" aria-owns="status-unknown-thead plugin-unknown" aria-controls="status-unknown-thead plugin-unknown" aria-expanded="false">{{_('Unknown Plugins')}}</caption>
+            <thead id="status-unknown-thead" class="hidden" aria-hidden="true">
               <tr>
                 <th class="plugin-status-detail" scope="col">{{_('Plugin')}}</th>
                 <th class="plugin-status-action action" scope="col">{{_('Action')}}</th>
               </tr>
             </thead>
-            <tbody id="plugin-unknown"></tbody>
+            <tbody id="plugin-unknown" class="hidden" aria-hidden="true"></tbody>
           </table>
         </div>
       </div>
@@ -182,6 +185,18 @@
       <p><a href="#top">{{_('Back to Top')}}</a></p>
   </section>
 </main>
+
+<section class="newsletter-container-variant">
+  {% if LANG == 'en-US' %}
+    <header>
+      <h3>{{ _('<span class="firefox">Firefox</span> + You') }}</h3>
+      <h4>{{ _('Get Firefox tips, tricks, news and more') }}</h4>
+    </header>
+    {{ email_newsletter_form() }}
+  {% else %}
+    {{ email_newsletter_form() }}
+  {% endif %}
+</section>
 
 <section class="billboard pluginfaq-container">
     <h2>{{_('Frequently Asked Questions')}}</h2>
@@ -278,18 +293,8 @@
 </div>
 {% endblock %}
 
-{% block email_form %}
-  <!-- for this page we need the form to live inside a container that will be the full widtth
-    of the parent container so, we cannot just inherit from mozorg/responsive -->
-  <section class="newsletter-container">
-    {% if LANG == 'en-US' %}
-      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Get Mozilla updates')) }}
-    {% else %}
-      {{ email_newsletter_form() }}
-    {% endif %}
-  </section>
-{% endblock %}
+{% block email_form %}{% endblock %}
 
 {% block js %}
-  {% javascript 'plugincheck' %}
+  {% javascript 'plugincheck-c' %}
 {% endblock %}
