--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -951,6 +951,18 @@ html[lang|="en"] {
     }
 }
 
+
+/****************************************************************************/
+// Food Water Shelter Internet
+.promo-large-landscape.food-water-shelter {
+    background: #00659a; // dark blue
+
+    h3 {
+        margin-top: @baseLine * 2;
+    }
+}
+
+
 /****************************************************************************/
 // Firefox iOS
 .promo-large-portrait.firefox-ios {
