--- a/bedrock/base/templates/includes/tabzilla-console-footer.html
+++ b/bedrock/base/templates/includes/tabzilla-console-footer.html
@@ -1,8 +1,3 @@
+The version of Tabzilla you are using is deprecated and will be removed in the future.
 
-
----
-
-If you don't want to see this message next time, run this JS statement:
-
-    Tabzilla.disableEasterEgg()
-
+Please update to the new static version here: https://github.com/mozilla/tabzilla/
