Use CDN instead of CDN origin: bug 1245186

--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v1/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v1/joy-of-coding.html
@@ -18,7 +18,7 @@
       </header>
       <div class="step-content">
         <video id="joc" preload="none" controls poster="{{ static('img/contribute/signup/joc_poster.png') }}" data-action="play" data-task="joyofcoding" data-step="one" data-complete="true" data-variation="1">
-          <source src="https://videos-real-origin.cdn.mozilla.net/uploads/Videos%20creative/joc-video.mp4" type="video/mp4" />
+          <source src="https://videos.cdn.mozilla.net/uploads/Videos%20creative/joc-video.mp4" type="video/mp4" />
         </video>
         <button type="button" class="button-blue watch" data-action="play" data-task="joyofcoding" data-step="one" data-complete="true" data-variation="1">Watch Video</button>
       </div>
