Fix Bug 1246806, ensure video element interactions work, remove underline from button hover state

--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/v2/joy-of-coding.html
@@ -19,7 +19,7 @@
         <p>{{ _('<a href="https://twitter.com/mike_conley" rel="external">@mike_conley</a> livehacks on real Firefox bugs while thinking out loud.') }}</p>
       </header>
       <div class="step-content">
-        <video id="joc" preload="none" controls poster="{{ static('img/contribute/signup/joc_poster.png') }}" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false" data-variation="2">
+        <video id="joc" preload="none" controls poster="{{ static('img/contribute/signup/joc_poster.png') }}" data-task="joyofcoding" data-step="one" data-complete="false" data-variation="2">
           <source src="https://videos.cdn.mozilla.net/uploads/Videos%20creative/joc-video.mp4" type="video/mp4" />
         </video>
         <button type="button" class="button-blue watch" data-action="play" data-task="joyofcoding" data-step="one" data-complete="false" data-variation="2">{{ _('Watch Video') }}</button>
