--- a/media/css/mozorg/contribute/signup.less
+++ b/media/css/mozorg/contribute/signup.less
@@ -193,6 +193,12 @@ main {
         border-color: #0c99d5;
     }
 
+    a:hover,
+    a:focus,
+    a:active {
+        text-decoration: none;
+    }
+
     .outline-button {
         display: inline-block;
         color: #0c99d5;
