[bug 1248040] Update GTM data attributes on /firefox/new/

--- a/bedrock/base/templates/base-resp.html
+++ b/bedrock/base/templates/base-resp.html
@@ -102,7 +102,7 @@
 
         {% block tabzilla_tab %}
           <div id="tabzilla">
-            <a href="{{ url('mozorg.home') }}">Mozilla</a>
+            <a href="{{ url('mozorg.home') }}" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
           </div>
         {% endblock %}
 
