Fix Bug 1246216 - Update Ari Jaaksi's Mozillians profile URL

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -124,7 +124,7 @@
 
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/jaaksi">@jaaksi</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/arijaaksi/">{{ _('Mozillians profile') }}</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/ajaaksi/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
