[bug 1239863] Remove and redirect /firefox/os/faq/ page to SUMO

--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -55,7 +55,7 @@
       <div class="container device-list">
         <header class="section-header">
           <h2 class="section-heading">{{ _('Smartphones') }}</h2>
-          <a href="{{ url('firefox.os.faq') }}" class="faq-button arrow-link button">{{ _('Firefox OS FAQ') }}</a>
+          <a href="https://support.mozilla.org/products/firefox-os" rel="external" class="faq-button arrow-link button">{{ _('Firefox OS FAQ') }}</a>
         </header>
 
         <div class="location-select-wrapper">
