--- a/bedrock/firefox/templates/firefox/tracking-protection-tour.html
+++ b/bedrock/firefox/templates/firefox/tracking-protection-tour.html
@@ -26,6 +26,13 @@ data-panel1-step="{{ _('1 of 3') }}"
 data-panel1-button="{{ _('Next') }}"
 data-panel3-title="{{ _('Want to make changes?') }}"
 data-panel3-text="{{ _('It’s easy to turn off Tracking Protection for the website you’re on by clicking “Disable protection for this session.”') }}"
+
+{% if l10n_has_tag('tp_tour_firefox_201602') %}
+  data-panel3-text-new-tab="{{ _('It’s easy to turn off Tracking Protection for the website you’re on by clicking “Disable protection for this site.”') }}"
+{% else %}
+  data-panel3-text-new-tab="{{ _('It’s easy to turn off Tracking Protection for the website you’re on by clicking “Disable protection for this session.”') }}"
+{% endif %}
+
 data-panel3-text-alt="{{ _('It’s easy to turn on Tracking Protection for the website you’re on by clicking “Enable protection.”') }}"
 data-panel3-step="{{ _('3 of 3') }}"
 data-panel3-button="{{ _('Got it!') }}"
