Fix Bug 1249003 - https://www.mozilla.org/en-US/foundation/moco/ needs to be updated

--- a/bedrock/foundation/templates/foundation/moco.html
+++ b/bedrock/foundation/templates/foundation/moco.html
@@ -42,10 +42,10 @@
   <h3>{{ _('Board of Directors') }}</h3>
   <ul>
     {# L10n: This "Chair" is the chairperson of the board of directors, not something to sit on #}
-    <li><a href="//blog.lizardwrangler.com/">Mitchell Baker</a>, {{ _('Chair') }}</li>
-    <li>Chris Beard</li>
-    <li><a href="//www.linkedin.com/in/reidhoffman">Reid Hoffman</a></li>
-    <li>Katharina Borchert</li>
+    <li><a href="https://blog.mozilla.org/press/bios/mitchell-baker/">Mitchell Baker</a>, {{ _('Chair') }}</li>
+    <li><a href="https://blog.mozilla.org/press/bios/chris-beard/">Chris Beard</a></li>
+    <li><a href="https://www.linkedin.com/in/reidhoffman">Reid Hoffman</a></li>
+    <li><a href="http://www.hbs.edu/klakhani">Karim Lakhani</a></li>
   </ul>
 
   <p>
