--- a/bedrock/base/templates/includes/site-footer.html
+++ b/bedrock/base/templates/includes/site-footer.html
@@ -12,17 +12,17 @@
           </div>
           <div class="col col-2">
             <ul class="links-join">
-              <li><a href="{{ url('mozorg.contact.contact-landing') }}">{{ _('Contact Us') }}</a></li>
-              <li class="wrap"><a href="{{ url('mozorg.partnerships') }}">{{ _('Partner with Us' ) }}</a></li>
-              <li class="clear"><a href="{{ donate_url('footer') }}" class="donate">{{ _('Donate') }}</a></li>
-              <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}">{{ _('Firefox Friends') }}</a></li>
-              <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org">{{ _('Contribute to this site') }}</a></li>
+              <li><a href="{{ url('mozorg.contact.contact-landing') }}" data-link-type="footer" data-link-name="Contact Us">{{ _('Contact Us') }}</a></li>
+              <li class="wrap"><a href="{{ url('mozorg.partnerships') }}" data-link-type="footer" data-link-name="Partner with Us">{{ _('Partner with Us' ) }}</a></li>
+              <li class="clear"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
+              <li class="wrap"><a href="{{ url('mozorg.contribute.friends') }}" data-link-type="footer" data-link-name="Firefox Friends">{{ _('Firefox Friends') }}</a></li>
+              <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></li>
             </ul>
             <ul class="links-legal">
-              <li><a href="{{ url('privacy') }}">{{ _('Privacy') }}</a></li>
-              <li class="wrap"><a href="{{ url('privacy.notices.websites') }}#cookies">{{ _('Cookies') }}</a></li>
-              <li class="wrap"><a href="{{ url('legal.index') }}">{{ _('Legal') }}</a></li>
-              <li class="clear"><a href="{{ url('legal.fraud-report') }}">{{ _('Report Trademark Abuse') }}</a></li>
+              <li><a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a></li>
+              <li class="wrap"><a href="{{ url('privacy.notices.websites') }}#cookies" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a></li>
+              <li class="wrap"><a href="{{ url('legal.index') }}" data-link-type="footer" data-link-name="Legal">{{ _('Legal') }}</a></li>
+              <li class="clear"><a href="{{ url('legal.fraud-report') }}" data-link-type="footer" data-link-name="Report Trademark Abuse">{{ _('Report Trademark Abuse') }}</a></li>
             </ul>
           </div>
           <div class="col col-3">
@@ -30,16 +30,16 @@
               <li>
                 {{ _('Mozilla:') }}
                 <ul>
-                  <li><a href="https://twitter.com/mozilla">{{ _('Twitter') }}<span> (@mozilla)</span></a></li>
-                  <li><a href="https://www.facebook.com/mozilla">{{ _('Facebook') }}<span> (Mozilla)</span></a></li>
+                  <li><a href="https://twitter.com/mozilla" data-link-type="footer" data-link-name="Twitter (@mozilla)">{{ _('Twitter') }}<span> (@mozilla)</span></a></li>
+                  <li><a href="https://www.facebook.com/mozilla" data-link-type="footer" data-link-name="Facebook (Mozilla)">{{ _('Facebook') }}<span> (Mozilla)</span></a></li>
                 </ul>
               </li>
               <li>
                 {{ _('Firefox:') }}
                 <ul>
-                  <li><a href="{{ firefox_twitter_url() }}">{{ _('Twitter') }}<span> (@firefox)</span></a></li>
-                  <li><a href="https://www.facebook.com/Firefox">{{ _('Facebook') }}<span> (Firefox)</span></a></li>
-                  <li><a href="https://www.youtube.com/firefoxchannel">{{ _('YouTube') }}<span> (firefoxchannel)</span></a></li>
+                  <li><a href="{{ firefox_twitter_url() }}" data-link-type="footer" data-link-name="Twitter (@firefox)">{{ _('Twitter') }}<span> (@firefox)</span></a></li>
+                  <li><a href="https://www.facebook.com/Firefox" data-link-type="footer" data-link-name="Facebook (Firefox)">{{ _('Facebook') }}<span> (Firefox)</span></a></li>
+                  <li><a href="https://www.youtube.com/firefoxchannel" data-link-type="footer" data-link-name="YouTube (firefoxchannel)">{{ _('YouTube') }}<span> (firefoxchannel)</span></a></li>
                 </ul>
               </li>
             </ul>
