--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -194,12 +194,12 @@
       <ul id="fxfamilynav-primary" class="primarynav">
         {# L10n: The <span> elements below are for visual formatting #}
         <li{% if activeprimary == 'desktop' %} class="active"{% endif %}>
-          <a data-id="desktop" href="{{ url('firefox.desktop.index') }}" class="primary-link"><div>{{ _('<span>for</span> Desktop') }}</div></a>
+          <a data-id="desktop" href="{{ url('firefox.desktop.index') }}" class="primary-link" data-link-type="nav" data-link-name="for Desktop"><div>{{ _('<span>for</span> Desktop') }}</div></a>
 
           <ul class="subnav" id="desktop-subnav">
             {# note: Removing hassubsubnav for now because after localization nav items get pushed to two lines #}
             <li {# {% if activesub in ('index', 'trust', 'customize', 'fast') %} class="hassubsubnav"{% endif %} #}>
-              <a href="{{ url('firefox.desktop.index') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a>
+              <a href="{{ url('firefox.desktop.index') }}"{% if activesub == 'index' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Desktop: Overview"><div>{{ _('Overview') }}</div></a>
 
             {# note: Removing items for now because after localization nav items get pushed to two lines
               {% if activesub in ('index', 'trust', 'customize', 'fast') %}
@@ -211,13 +211,13 @@
               {% endif %}
             #}
             </li>
-            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %}><div>{{ _('Sync') }}</div></a></li>
-            <li><a href="{{ url('firefox.hello') }}"{% if activesub == 'hello' %} class="selected"{% endif %}><div>{{ _('Hello') }}</div></a></li>
-            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %}><div>{{ _('Private Browsing') }}</div></a></li>
+            <li><a href="{{ url('firefox.sync') }}"{% if activesub == 'sync' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Desktop: Sync"><div>{{ _('Sync') }}</div></a></li>
+            <li><a href="{{ url('firefox.hello') }}"{% if activesub == 'hello' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Desktop: Hello"><div>{{ _('Hello') }}</div></a></li>
+            <li><a href="{{ url('firefox.private-browsing') }}"{% if activesub == 'private-browsing' %} class="selected"{% endif %} data-link-type="nav" data-link-name="for Desktop: Private Browsing"><div>{{ _('Private Browsing') }}</div></a></li>
           </ul>
         </li>
         <li{% if activeprimary == 'android' %} class="active"{% endif %}>
-          <a data-id="android" href="{{ url('firefox.android.index') }}" class="primary-link"><div>{{ _('<span>for</span> Android') }}</div></a>
+          <a data-id="android" href="{{ url('firefox.android.index') }}" class="primary-link" data-link-type="nav" data-link-name="for Android"><div>{{ _('<span>for</span> Android') }}</div></a>
 
           <ul class="subnav" id="android-subnav">
             <li><a href="{{ url('firefox.android.index') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a></li>
@@ -226,7 +226,7 @@
           </ul>
         </li>
         <li{% if activeprimary == 'ios' %} class="active"{% endif %}>
-          <a data-id="ios" href="{{ url('firefox.ios') }}" class="primary-link"><div>{{ _('<span>for</span> iOS') }}</div></a>
+          <a data-id="ios" href="{{ url('firefox.ios') }}" class="primary-link" data-link-type="nav" data-link-name="for iOS"><div>{{ _('<span>for</span> iOS') }}</div></a>
 
           <ul class="subnav" id="ios-subnav">
             <li><a href="{{ url('firefox.ios') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a></li>
@@ -235,7 +235,7 @@
           </ul>
         </li>
         <li{% if activeprimary == 'os' %} class="active"{% endif %}>
-          <a data-id="os" href="{{ url('firefox.os.index') }}" class="primary-link"><div>{{ _('Firefox OS') }}</div></a>
+          <a data-id="os" href="{{ url('firefox.os.index') }}" class="primary-link" data-link-type="nav" data-link-name="Firefox OS"><div>{{ _('Firefox OS') }}</div></a>
 
           <ul class="subnav" id="os-subnav">
             <li><a data-id="os-index" href="{{ url('firefox.os.index') }}"{% if activesub == 'index' %} class="selected"{% endif %}><div>{{ _('Overview') }}</div></a></li>
@@ -252,12 +252,12 @@
       <div class="triangle-border"></div>
 
       <ul class="tertiarynav{% if activeprimary == 'desktop' %} active{% endif %}">
-        <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt">{{ _('Do Not Track') }}</a></li>
-        <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="desktop - interest dashboard">{{ _('Interest Dashboard') }}</a></li>
-        <li><a href="{{ url('firefox.developer') }}" data-ga="desktop - developer edition">{{ _('Developer Edition') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="desktop - private browsing">{{ _('Private Browsing') }}</a></li>
-        <li><a rel="external" href="https://addons.mozilla.org" data-ga="desktop - addons">{{ _('Add-ons') }}</a></li>
-        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support">{{ _('Need help?') }}</a></li>
+        <li><a href="{{ url('firefox.dnt') }}" data-ga="desktop - dnt" data-link-type="nav" data-link-name="Side Menu: Do Not Track">{{ _('Do Not Track') }}</a></li>
+        <li><a href="{{ url('firefox.interest-dashboard') }}" data-ga="desktop - interest dashboard" data-link-type="nav" data-link-name="Side Menu: Interest Dashboard">{{ _('Interest Dashboard') }}</a></li>
+        <li><a href="{{ url('firefox.developer') }}" data-ga="desktop - developer edition" data-link-type="nav" data-link-name="Side Menu: Developer Edition">{{ _('Developer Edition') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/kb/private-browsing-browse-web-without-saving-info" data-ga="desktop - private browsing" data-link-type="nav" data-link-name="Side Menu: Private Browsing">{{ _('Private Browsing') }}</a></li>
+        <li><a rel="external" href="https://addons.mozilla.org" data-ga="desktop - addons" data-link-type="nav" data-link-name="Side Menu: Add-ons">{{ _('Add-ons') }}</a></li>
+        <li><a rel="external" href="https://support.mozilla.org/products/firefox" data-ga="desktop - support" data-link-type="nav" data-link-name="Side Menu: Need help?">{{ _('Need help?') }}</a></li>
       </ul>
 
       <ul class="tertiarynav{% if activeprimary == 'android' %} active{% endif %}">
@@ -282,7 +282,7 @@
     {# Page will dictate CTA (button, usually) to be placed in this wrapper #}
     <div id="fxfamilynav-cta-wrapper" class="fxfamilynav-cta-wrapper">{% if caller %}{{ caller() }}{% endif %}</div>
 
-    <button type="button" id="fxfamilynav-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav">
+    <button type="button" id="fxfamilynav-tertiarynav-trigger" class="fxfamilynav-tertiarynav-trigger" aria-controls="fxfamilynav-tertiarynav" data-link-type="nav" data-link-name="Open Side Menu">
       <span>{{ _('Menu') }}</span>
       <div class="trigger-dots">
         <div class="trigger-dot"></div>
@@ -292,7 +292,7 @@
     </button>
 
     <div id="tabzilla">
-      <a href="{{ url('mozorg.home') }}">Mozilla</a>
+      <a href="{{ url('mozorg.home') }}" data-link-type="nav" data-link-name="tabzilla">Mozilla</a>
     </div>
   </div>{#-- /.container --#}
 </header>{#-- /#fxfamilynav-header --#}
