Fixes Bug 1249481 - update Gigabit pilot period dates

--- a/bedrock/gigabit/templates/gigabit/apply.html
+++ b/bedrock/gigabit/templates/gigabit/apply.html
@@ -73,7 +73,7 @@
                   <td>{{ _('Round 1 Review Deadline') }}</td>
                 </tr>
                 <tr>
-                  <td>{{ _('May 1 - August 31, 2016') }}</td>
+                  <td>{{ _('May 16, 2016 - September 4, 2016') }}</td>
                   <td>{{ _('Round 1 Pilot Period') }}</td>
                 </tr>
                 <tr>
@@ -85,7 +85,7 @@
                   <td>{{ _('Round 2 Review Deadline') }}</td>
                 </tr>
                 <tr>
-                  <td>{{ _('January 1 - April 30, 2017') }}</td>
+                  <td>{{ _('January 2, 2017 - April 24, 2017') }}</td>
                   <td>{{ _('Round 2 Pilot Period') }}</td>
                 </tr>
               </tbody>
