--- a/bedrock/firefox/templates/firefox/new/scene2.html
+++ b/bedrock/firefox/templates/firefox/new/scene2.html
@@ -39,7 +39,7 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-new-scene2-optimizely') %}
+  {% if waffle.switch('firefox-new-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
