--- a/media/css/sandstone/lib.less
+++ b/media/css/sandstone/lib.less
@@ -272,6 +272,13 @@
     flex: @values;
 }
 
+.flex-wrap(@value: wrap) {
+    -webkit-flex-wrap: wrap;
+    -moz-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
 .align-items(@align: stretch) {
     -webkit-align-items: @align;
        -moz-align-items: @align;
