--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -74,15 +74,20 @@
 
       <div class="buttons">
         <div class="show-fx-31-signed-in">
+        {% if l10n_has_tag('firefox_sync_mobile_buttons_update') %}
+          <p>
+            {{ _('Now sync Firefox with your iOS and Android devices.') }}
+          </p>
+        {% endif %}
           <ul class="primary-buttons">
             <li>
-              <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-android">
-                {{ _('Get Firefox for Android') }}
+              <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-interaction="button click" data-element-action="Sync CTA" id="cta-android">
+                {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
               </a>
             </li>
             <li>
-              <a href="{{ firefox_ios_url('mozorg-sync_page-appstore-button') }}" class="sync-button green" data-interaction="button click" data-element-action="Sync CTA" id="cta-ios">
-                {{ _('Get Firefox for iOS') }}
+              <a href="{{ firefox_ios_url('mozorg-sync_page-appstore-button') }}" data-interaction="button click" data-element-action="Sync CTA" id="cta-ios">
+                <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45">
               </a>
             </li>
           </ul>
@@ -94,9 +99,30 @@
         </div>
 
         <div class="show-fx-31-signed-out">
+        {% if not version %}
           <button class="sync-button" data-interaction="button click" data-element-action="Sync CTA"  id="cta-sync">
             {{ _('Get started with Sync') }}
           </button>
+        {% else %}
+          <form id="fxa-email-form" action="{{ url('firefox.accounts') }}" method="get">
+            <input type="hidden" id="variation" name="v" value="{{ version }}">
+            <label for="fxa-email" class="fxa-email">
+            {% if version == '2' %}
+              {{ _('Enter your email to begin.') }}
+            {% elif version == '3' %}
+              {{ _('Create a Firefox account to begin.') }}
+            {% endif %}
+            </label>
+            <input type="email" id="fxa-email" class="fxa-email" placeholder="{{ _('YOUR EMAIL HERE') }}">
+            <button type="submit" class="sync-button" data-interaction="button click" data-element-action="Sync CTA" id="cta-sync-variation">
+            {% if version == '2' %}
+              {{ _('Get started with Sync') }}
+            {% elif version == '3' %}
+              {{ _('Set up Sync') }}
+            {% endif %}
+            </button>
+          </form>
+        {% endif %}
         </div>
 
         <div class="show-fx-29-30">
