Fix Bug 1249931 - Thunderbird release notes "Want to get involved? .. Find out more" link goes to mozilla black hole

--- a/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
+++ b/bedrock/thunderbird/templates/thunderbird/releases/release-notes.html
@@ -117,7 +117,7 @@
       <section id="get-involved">
         <h3>{{ _('Want to get involved?') }}</h3>
         <p>{{ _('Did you know that most of the content in Thunderbird Support was written by volunteers?') }}<br>
-        <a href="{{ url('mozorg.contribute') }}">{{ _('Find out more') }}</a></p>
+        <a href="https://wiki.mozilla.org/Thunderbird#Contributing">{{ _('Find out more') }}</a></p>
       </section>
 
       <section id="problems">
