--- a/bedrock/firefox/templates/firefox/accounts.html
+++ b/bedrock/firefox/templates/firefox/accounts.html
@@ -4,8 +4,6 @@
 
 {% extends "firefox/base-resp.html" %}
 
-{% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
-
 {% block page_title_prefix %}{{_('Get a Firefox Account')}}{% endblock %}
 {% block page_title %}{% endblock %}
 {% block page_desc %}{{_('Get easy access to your bookmarks, passwords, tabs and more from any computer or mobile device running Firefox.')}}{% endblock %}
@@ -15,31 +13,49 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-mau2account') %}
+  {% if waffle.switch('firefox-accounts') %}
      {% include 'includes/optimizely.html' %}
   {% endif %}
 {% endblock %}
 
 {% block body_class %}{% endblock %}
-
-{% block site_header_logo %}
-<h2><a href="{{ url('firefox') }}">{{ high_res_img('firefox/accounts/firefox-accounts-wordmark.png', {'alt': 'Firefox Accounts', 'width': '230', 'height': '60'}) }}</a></h2>
-{% endblock %}
 {% block site_header_nav %}{% endblock %}
 
 {% block content %}
 <main role="main" data-fxa-iframe-host="{{ settings.FXA_IFRAME_SRC }}">
-  <h1>{{_('Your Firefox. Anywhere. Anytime.')}}</h1>
+  <h1>{{_('Sign up, sign in, stay in sync.')}}</h1>
   <div class="main-copy">
     {% include 'firefox/includes/sync-animation.html' %}
-    <p>{{_('Get easy access to your bookmarks, passwords, tabs and more from any computer or mobile device running Firefox.')}}</p>
-    <ol>
-      <li>{{_('Get a Firefox Account.')}}</li>
-      <li>{{_('Sign in on your computers and mobile devices.')}}</li>
-      <li>{{_('Sync to access your personal Firefox.')}}</li>
+    <p class="tagline">{{_('With a Firefox Account, you can get all your bookmarks, passwords, open tabs and more — everywhere you use Firefox.')}}</p>
+    <ol class="sign-up-instructions">
+      <li>{{_('Sign up for a Firefox Account')}}</li>
+      <li>{{_('Sign in everywhere you use Firefox')}}</li>
+      <li>{{_('Sync what you want')}}</li>
     </ol>
+    <p class="signed-in">{{_('You’re signed in and ready to start using Sync.')}}</p>
   </div>
-  <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=accounts-page&amp;utm_content=fx-{{ version }}&amp;entrypoint=accounts-page&amp;service=sync&amp;context=iframe&amp;style=chromeless&amp;haltAfterSignIn=true"></iframe>
+  <aside>
+    <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=accounts-page&amp;utm_content=fx-{{ version }}&amp;entrypoint=accounts-page&amp;service=sync&amp;context=iframe&amp;style=chromeless&amp;haltAfterSignIn=true"></iframe>
+    <div class="mobile">
+      <a class="button-flat-dark firefox-ios more" rel="external" href="https://support.mozilla.org/kb/sync-firefox-bookmarks-and-browsing-history-iOS">{{_('Set up Sync for iOS')}}</a>
+      {# L10n: Line break below for visual formatting only. #}
+      <a class="button-flat-dark firefox-android more" rel="external" href="https://support.mozilla.org/kb/sync-bookmarks-tabs-history-and-passwords-android">{{_('Set up Sync on your <br>Android device')}}</a>
+      <div class="non-firefox">
+        <p>{{_('Download Firefox to start using Sync.')}}</p>
+        <a href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">
+          {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
+        </a>
+        <a href="{{ firefox_ios_url('mozorg-sync_page-appstore-button') }}">
+          <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45">
+        </a>
+      </div>
+    </div>
+    <div class="download-firefox">
+      <p class="non-firefox">{{_('Download Firefox to start using Sync.')}}</p>
+      <p class="old-firefox">{{_('Get the latest Firefox to start using Sync.')}}</p>
+      {{ download_firefox(simple=True, icon=False) }}
+    </div>
+  </aside>
 </main>
 {% endblock %}
 
