--- a/media/css/firefox/accounts.less
+++ b/media/css/firefox/accounts.less
@@ -20,6 +20,7 @@ h1 {
     .font-size(60px);
     color: #56565a;
     text-align: center;
+    line-height: 1.2;
 }
 
 #tabzilla:before {
@@ -35,11 +36,15 @@ h1 {
 .main-copy {
     float: left;
     width: 490px;
+    color: #56565a;
 
-    p {
+    .tagline {
         .font-size(22px);
-        color: #56565a;
         line-height: 1.3;
+    }
+
+    ol li {
+        .font-size(18px);
     }
 }
 
@@ -47,15 +52,19 @@ h1 {
     margin-bottom: @gridGutterWidth;
 }
 
-#fxa {
-    display: block;
+aside {
     float: right;
-    opacity: 0;
     width: 400px;
     margin: 0 auto;
+    text-align: center;
+}
+
+#fxa {
+    opacity: 0;
+    width: 100%;
+    border: none;
     background: #fff;
     border-radius: 6px;
-    border: none;
     overflow: hidden;
     .transition(height 0.25s ease);
 
@@ -64,26 +73,148 @@ h1 {
     }
 }
 
-// minimal design for optimizely test
-main.minimal {
-    .main-copy {
-        display: none;
+.signed-in {
+    margin-top: @baseLine * 2;
+    padding-left: @gridGutterWidth * 2;
+    .font-size(20px);
+    .at2x('/media/img/firefox/accounts/green-check.png', 30px, 30px);
+    background-position: top left;
+    background-repeat: no-repeat;
+}
+
+.mobile > .non-firefox > p,
+.download-firefox > p {
+    .font-size(20px);
+    color: #56565a;
+}
+
+.download-firefox .download-dumb > .download-heading {
+    color: #56565a;
+}
+
+.button-flat-dark {
+    .font-size(20px);
+}
+
+#fxa,
+.signed-in,
+.sign-up-instructions,
+.firefox-ios,
+.firefox-android,
+.mobile,
+.download-firefox,
+.non-firefox,
+.old-firefox {
+    display: none;
+}
+
+.no-js {
+    .download-firefox,
+    .non-firefox {
+        display: block;
+    }
+}
+
+// Firefox desktop users see the FxA iframe
+.state-firefox-up-to-date {
+    #fxa {
+        display: block;
+    }
+}
+
+// Non-eligible states get single column
+.state-non-firefox,
+.state-old-firefox,
+.state-firefox-ios,
+.state-firefox-android,
+.state-mobile {
+    .main-copy,
+    aside {
+        float: none;
+        margin: 0 auto (@baseLine * 2);
+        text-align: center;
     }
 
-    #fxa {
-        float: none;
+    .sync-anim {
+        margin: 0 auto 20px;
+    }
+}
+
+.state-non-firefox {
+    .download-firefox,
+    .non-firefox {
+        display: block;
+    }
+}
+
+.state-old-firefox {
+    .download-firefox,
+    .old-firefox {
+        display: block;
+    }
+}
+
+.state-firefox-ios {
+    .mobile {
+        display: block;
+    }
+    .firefox-ios {
+        display: inline-block;
+    }
+}
+
+.state-firefox-android {
+    .mobile {
+        display: block;
+    }
+    .firefox-android {
+        display: inline-block;
+    }
+}
+
+.state-mobile {
+    .mobile {
+        display: block;
+
+        .non-firefox {
+            display: block;
+        }
     }
 }
 
 @media only screen and (max-width: @breakDesktop) {
 
-    .main-copy {
-        width: 400px;
+    // some locales use <br class="wide-br"> to support line breaks
+    // in page titles at desktop viewports.
+    .wide-br {
+        display: none;
     }
 
-    #fxa {
-        width: 300px;
-        padding: @baseLine 0;
+    .main-copy {
+        width: 380px;
+        padding-top: 166px;
+        background-image: url('/media/img/firefox/sync/composite.png');
+        background-position: top center;
+        background-repeat: no-repeat;
+        .background-size(300px, 146px);
+    }
+
+    .sync-anim {
+        display: none;
+    }
+
+    aside {
+        width: 320px;
+    }
+
+    .state-non-firefox,
+    .state-old-firefox,
+    .state-firefox-ios,
+    .state-firefox-android,
+    .state-mobile {
+        aside {
+            width: 400px;
+        }
     }
 }
 
@@ -97,21 +228,43 @@ main.minimal {
     .main-copy {
         float: none;
         width: auto;
-        padding: 0 @baseLine;
+        padding: 166px @baseLine 0;
 
-        p {
+        .tagline {
             .font-size(18px);
-            margin-bottom: @baseLine * 2;
             text-align: center;
+        }
+
+        .signed-in {
+            .font-size(@largeFontSize);
+            text-align: left;
+        }
+
+        ol li {
+            .font-size(@largeFontSize);
         }
     }
 
-    #fxa {
+    aside {
         float: none;
+        width: auto;
     }
 
-    .sync-anim {
-        display: none;
+    .state-non-firefox,
+    .state-old-firefox,
+    .state-firefox-ios,
+    .state-firefox-android,
+    .state-mobile {
+        .main-copy,
+        aside {
+            width: auto;
+            margin: 0 auto @baseLine;
+        }
+    }
+
+    .mobile > .non-firefox > p,
+    .download-firefox > p {
+        .font-size(@largeFontSize);
     }
 }
 
@@ -119,5 +272,10 @@ main.minimal {
 
     main {
         padding: 0;
+    }
+
+    .main-copy .tagline,
+    .button-flat-dark {
+        .font-size(18px);
     }
 }
