--- a/bedrock/firefox/templates/firefox/desktop/index.html
+++ b/bedrock/firefox/templates/firefox/desktop/index.html
@@ -19,6 +19,12 @@
   {% stylesheet 'firefox_desktop' %}
 {% endblock %}
 
+{% block optimizely %}
+  {% if waffle.switch('firefox-desktop-optimizely') %}
+    {% include 'includes/optimizely.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block site_header_unwrapped %}
   {% call fxfamilynav('desktop', 'index', 'dark') %}
     {{ download_firefox(simple=True, small=True, dom_id="sticky-download-desktop") }}
