--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -156,7 +156,18 @@
 
 {% endblock %}
 
-{% block email_form %}{% endblock %}
+{% block email_form %}
+  {% if LANG.startswith('en-') %}
+  <aside id="newsletter-subscribe" class="light ga-section" data-ga-label="Keep up with all things Firefox.">
+    <div class="content container">
+      <header>
+        <h3>{{ _('Keep up with all things Firefox.') }}</h3>
+      </header>
+      {{ email_newsletter_form(title=' ') }}
+    </div>
+  </aside>
+  {% endif %}
+{% endblock %}
 
 {% block js %}
   <!--[if IE 9]>
