--- a/media/css/firefox/desktop/common.less
+++ b/media/css/firefox/desktop/common.less
@@ -589,6 +589,129 @@ html[dir="rtl"] {
     }
 }
 
+// Newsletter signup testing - bug 1249042
+#subscribe-download-wrapper.variant.active {
+    background: @mozIDBlue;
+    color: #fff;
+    padding: 0;
+
+    .container {
+        padding-top: @baseLine * 2;
+        padding-bottom: @baseLine * 2;
+    }
+
+    .form-title {
+        .at2x('/media/img/firefox/newsletter.png', 149px, 149px);
+        .span(4);
+        background-position: left top;
+        background-repeat: no-repeat;
+        min-height: 120px;
+        padding: 30px 0 20px 180px;
+        .font-size(40px);
+        margin-left: -((@gridColumnWidth * 7) + (@gridGutterWidth * 6));
+        margin-top: -30px;
+        text-shadow: none;
+
+        @media (max-width: @breakDesktop) {
+            .background-size(120px, 120px);
+            .span_narrow(4);
+            background-position: left 10px;
+            padding-left: 140px;
+            margin-left: -((@gridColumnWidthNarrow * 7) + (@gridGutterWidth * 6));
+            margin-top: -30px;
+            .font-size(36px);
+        }
+
+        @media (max-width: @breakTablet) {
+            .background-size(100px, 100px);
+            .span-all;
+            background-position: center top;
+            padding-left: 0;
+            padding-top: 120px;
+            text-align: center;
+            min-height: 0;
+            .font-size(32px);
+        }
+    }
+
+    .newsletter-form {
+        .span(5);
+        .offset(7);
+        padding-top: 30px;
+
+        .form-submit,
+        .form-contents {
+            .span-all;
+        }
+
+        @media (max-width: @breakDesktop) {
+            .span_narrow(5);
+            .offset_narrow(7);
+        }
+
+        @media (max-width: @breakTablet) {
+            .span-all;
+        }
+    }
+
+    .field-format label {
+        display: inline;
+        margin-right: 20px;
+    }
+
+    input[type='email'] {
+        .border-box;
+        .border-radius(4px);
+        .box-shadow(none);
+        .font-size(@largeFontSize);
+        border: 0;
+        padding: .75em 20px;
+        width: 100%;
+    }
+
+    select {
+        .font-size(@baseFontSize);
+        font-family: inherit;
+    }
+
+    .button {
+        .border-box;
+        .border-radius(5px);
+        .box-shadow(none);
+        .font-size(@largeFontSize);
+        .transition(background-color .15s ease);
+        background: transparent;
+        border: 2px solid #fff;
+        padding: .75em 20px;
+        text-shadow: none;
+        text-transform: uppercase;
+        width: 100%;
+
+        &:hover,
+        &:focus {
+            background: #33aae4;
+            background: rgba(255, 255, 255, .1);
+        }
+    }
+
+    a {
+        color: #fff;
+        text-decoration: underline;
+    }
+
+    #footer-email-errors {
+        .span-all;
+    }
+
+    #newsletter-form-thankyou {
+        color: #fff;
+
+        h3 {
+            color: #fff;
+        }
+    }
+}
+
 #subscribe-wrapper.columned {
     float: left;
     width: 400px;
